Domibus 3.3-RC1
- Expose the DOWNLOADED message status in the plugin API and the default ws plugin
- Migrated the logging framework to SLF4J and Logback
- Domibus uses 3 logs files: domibus.log, domibus-business.log and domibus-security.log
- JMS monitoring: fixed the computation of the total number of messages in the queue for WebLogic
- JMS monitoring: fixed the search of the JMS messages for WebLogic(for JMS messages having property with null values) and Tomcat(for JMS messages with no "Text" property)
- JMS monitoring: extended the functionality for clustered installations.
- Core: listPendingMessages and download operations behave correctly in case of a clustered installation.
- Core: Spring services are always executing within a transaction even if there is no specific @Transactional annotation present
- Core: Quartz integration with managed threads in WebLogic and WildFly
- Core: during sendMessage operation, Domibus verifies that the parties roles are allowed (present in PMode) and different among them.
- Core: during sendMessage operation, Domibus verifies that the message is being sent by the same party as the one configured as the sending access point.
- Core: during sendMessage operation, Domibus trims the leading and trailing whitespaces in all the request fields.
- Core: during sendMessage operation, Domibus verifies that, if MessageId and RefToMessageId is specified by backend client, then it should contain only printable ASCII characters.
- Core: during sendMessage operation, all validations comparisons with the PMode data are case insensitive.
- Core: during MSH dispatch operation, Domibus verifies the validity of sender's certificate.
- Core: during MSH receive operation, Domibus verifies the trust of the sender.
- Core: validation on MessageId and RefToMessageId can be by-passed by removing the key "domibus.sendMessage.messageIdPattern" from configuration file.