@@ -83,7 +83,8 @@ public interface BackendConnector<U, T> {
      *
      * @param messageId id of the message the status is requested for
      * @return the message status {@link eu.domibus.common.MessageStatus}
-     * @deprecated since 3.3-rc1
+     * @deprecated since 3.3-rc1; this method converts DOWNLOADED status to RECEIVED to maintain
+     * the backwards compatibility. Use getStatus(String messageId) instead
      */
     @Deprecated
     MessageStatus getMessageStatus(final String messageId);
