@@ -56,7 +56,9 @@ public interface MessageRetriever<T> {
      *
      * @param messageId id of the message the status is requested for
      * @return the message status {@link eu.domibus.common.MessageStatus}
-     * @deprecated since 3.3-rc1
+     * @deprecated since 3.3-rc1; this method converts DOWNLOADED status to RECEIVED to maintain
+     * the backwards compatibility. Use getStatus(String messageId) instead
+     *
      */
     @Deprecated
     MessageStatus getMessageStatus(String messageId);
